--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@types/react-redux": "^7.1.25",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^1.3.5",
+    "dayjs": "^1.11.7",
+    "i": "^0.3.7",
+    "jwt-decode": "^3.1.2",
+    "npm": "^9.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
