--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-redux": "^7.1.25",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^1.3.5",
+    "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
     "i": "^0.3.7",
     "jwt-decode": "^3.1.2",
@@ -28,11 +29,9 @@
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
-    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.7.3",
     "yup": "^1.0.2"
   },
@@ -42,9 +41,6 @@
     "@types/react-slick": "^0.23.10",
     "@types/redux-persist": "^4.3.1",
     "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
